--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,8 @@ authors = ["sergey-melnychuk"]
 edition = "2018"
 description = "Parser combinators library."
 license = "MIT"
+repository = "https://github.com/sergey-melnychuk/parsed"
+readme = "https://github.com/sergey-melnychuk/parsed"
 
 [dependencies]
+
