Add {get,put}_{u8, u16, u32, 16, 32} stream utilities, bump to 0.2.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "parsed"
-version = "0.1.6"
+version = "0.2.0"
 authors = ["sergey-melnychuk"]
 edition = "2018"
 description = "Parser combinators library."
@@ -11,3 +11,10 @@ documentation = "https://github.com/sergey-melnychuk/parsed"
 
 [dependencies]
 
+[dev-dependencies]
+bencher = "0.1.5"
+quickcheck = "0.9.2"
+
+[[bench]]
+name = "http"
+harness = false
