--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,12 +4,12 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --features "http" --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --features "http" --verbose
+    - name: Run benches
+      run: cargo test --features "http" --verbose
